# pyelectroluxgroup

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml  tox.ini
.github/: release-drafter.yml
.github/workflows/: lint.yml  publish.yml  release-drafter.yml  test.yml
src/: cli.py
src/pyelectroluxgroup/: api.py  appliance.py  auth.py  token_manager.py
src/pyelectroluxgroup/token_managers/: filesystem.py
tests/: test_api.py  test_auth.py
