[tool.poetry]
name = "pyelectroluxgroup"
version = "0.1.0"
description = ""
authors = ["Johan Nenzén <johan.nanzen@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pyelectroluxgroup", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
