[tool.poetry]
name = "pyelectroluxgroup"
version = "0.1.0"
description = ""
authors = ["Johan Nenzén <johan.nanzen@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pyelectroluxgroup", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.0"
pyjwt = "^2.8.0"
certifi = { version = "2024.7.4", optional = true }

[tool.poetry.extras]
cli = ["certifi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
