[tool.poetry]
name = "pyelectroluxgroup"
version = "0.2.0"
description = "This is a Python client for the Electrolux Group API. It is a simple wrapper around the API."
authors = ["Johan Nenzén <johan.nanzen@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JohNan/pyelectroluxgroup"
packages = [
    { include = "pyelectroluxgroup", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.0"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
certifi = "2024.7.4"
pytest = "^7.4"
pytest-sugar = "*"
pytest-cov = "*"
pytest-asyncio = "^0.23.8"
aioresponses = "^0.7.2"
black = "*"
mypy = "*"
ruff = "*"
isort = "*"
tox = "*"
tox-gh-actions = "^3.2.0"
pre-commit = "^3.8.0"

[tool.poetry.extras]
cli = ["certifi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
